# Kaadan_Game_engine

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.claude/skills/01-project-foundation/: SKILL.md
.claude/skills/02-math-and-core-types/: SKILL.md
.claude/skills/03-platform-abstraction/: SKILL.md
.claude/skills/04-renderer-core/: SKILL.md
.claude/skills/05-ecs-world/: SKILL.md
.claude/skills/06-2d-sprite-rendering/: SKILL.md
.claude/skills/07-input-and-audio/: SKILL.md
.claude/skills/08-asset-pipeline/: SKILL.md
.claude/skills/09-scene-and-ui/: SKILL.md
.claude/skills/10-physics-integration/: SKILL.md
.claude/skills/11-3d-rendering/: SKILL.md
.claude/skills/12-mobile-deploy-and-optimize/: SKILL.md
.github/workflows/: ci.yml
assets/shaders/: basic.wgsl  pbr.wgsl  pbr_mobile.wgsl  sprite.wgsl  ui.wgsl
crates/kaadan_app/: Cargo.toml
crates/kaadan_app/examples/: demo.rs  ui_demo.rs
crates/kaadan_app/src/: engine.rs  frame_pacer.rs  lib.rs  lifecycle.rs
crates/kaadan_assets/: Cargo.toml
crates/kaadan_assets/src/: async_io.rs  group.rs  hot_reload.rs  lib.rs  loader.rs  loaders.rs  resolver.rs  server.rs  storage.rs
crates/kaadan_audio/: Cargo.toml
crates/kaadan_audio/src/: engine.rs  lib.rs
crates/kaadan_core/: Cargo.toml
crates/kaadan_core/src/: error.rs  lib.rs  logging.rs
crates/kaadan_ecs/: Cargo.toml
crates/kaadan_ecs/src/: app.rs  events.rs  lib.rs  resources.rs  schedule.rs  time.rs  world.rs
crates/kaadan_editor/: Cargo.toml
crates/kaadan_editor/src/: app.rs  commands.rs  components.rs  gizmo.rs  main.rs  play.rs  scene_io.rs  state.rs  ui.rs  viewport.rs
crates/kaadan_editor/src/panels/: hierarchy.rs  inspector.rs  mod.rs  toolbar.rs
crates/kaadan_input/: Cargo.toml
crates/kaadan_input/src/: gesture.rs  input_map.rs  input_state.rs  lib.rs
crates/kaadan_math/: Cargo.toml
crates/kaadan_math/src/: color.rs  handle.rs  lib.rs  rect.rs  transform.rs
crates/kaadan_physics/: Cargo.toml
crates/kaadan_physics/src/: components.rs  lib.rs  plugin.rs  world.rs
crates/kaadan_platform/: Cargo.toml
crates/kaadan_platform/src/: desktop.rs  input_event.rs  lib.rs  platform.rs
crates/kaadan_renderer/: Cargo.toml
crates/kaadan_renderer/src/: atlas.rs  camera2d.rs  camera3d.rs  gltf_loader.rs  lib.rs  material.rs  mesh.rs  mesh3d.rs  pbr_renderer.rs  pipeline.rs  render_target.rs  renderer.rs  sprite.rs  sprite_batch.rs  sprite_renderer.rs  texture.rs  ui_renderer.rs  vertex.rs  vertex3d.rs
crates/kaadan_scene/: Cargo.toml
crates/kaadan_scene/src/: hierarchy.rs  lib.rs  scene.rs
crates/kaadan_script/: Cargo.toml
crates/kaadan_script/src/: context.rs  host.rs  lib.rs  registry.rs
crates/kaadan_script/tests/: hot_reload.rs
crates/kaadan_ui/: Cargo.toml
crates/kaadan_ui/src/: interaction.rs  layout.rs  lib.rs  node.rs  screen.rs  text.rs  widgets.rs
docs/: conventions.md
docs/audit/: CURRENT_STATE.md
docs/plan/: ROADMAP.md
docs/scripting/: abi.md
mobile/android/: AndroidManifest.xml  build.gradle.kts
mobile/ios/: Info.plist
scripts/: build_android.sh  build_game_template.sh  build_ios.sh
templates/game_template/: Cargo.toml
templates/game_template/src/: lib.rs
