[package]
name = "kaadan_assets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Asset loading and hot-reload pipeline for KaadanEngine"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_core.workspace = true
tracing.workspace = true
notify.workspace = true
