[package]
name = "kaadan_audio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audio playback for KaadanEngine"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_core.workspace = true
rodio.workspace = true
tracing.workspace = true
