[package]
name = "kaadan_core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types, logging, and error handling for KaadanEngine"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
