[package]
name = "kaadan_ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Entity-Component-System world for KaadanEngine"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_core.workspace = true
hecs.workspace = true
tracing.workspace = true

[dev-dependencies]
rayon.workspace = true
