[package]
name = "kaadan_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kaadan_editor"
path = "src/main.rs"

[dependencies]
kaadan_core.workspace = true
kaadan_math.workspace = true
kaadan_renderer.workspace = true
kaadan_ecs.workspace = true
kaadan_scene.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
ron.workspace = true

[lints]
workspace = true
