[package]
name = "kaadan_input"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Input handling for KaadanEngine (keyboard, touch, gamepad)"

[lints]
workspace = true

[dependencies]
gilrs.workspace = true
kaadan_core.workspace = true
