[package]
name = "kaadan_input"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Input handling for KaadanEngine (keyboard, touch, gamepad)"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_core.workspace = true
kaadan_platform.workspace = true
tracing.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
gilrs.workspace = true
