[package]
name = "kaadan_math"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Linear algebra and math utilities for KaadanEngine"

[lints]
workspace = true

[dependencies]
glam.workspace = true
bytemuck.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "glam/serde"]
