[package]
name = "kaadan_physics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "2D physics integration for KaadanEngine (Rapier)"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_ecs.workspace = true
rapier2d.workspace = true
