[package]
name = "kaadan_platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Platform abstraction layer for KaadanEngine (windowing, lifecycle)"

[lints]
workspace = true

[dependencies]
winit.workspace = true
raw-window-handle.workspace = true
kaadan_core.workspace = true
