[package]
name = "kaadan_platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Platform abstraction layer for KaadanEngine (windowing, lifecycle)"

[lints]
workspace = true

[dependencies]
kaadan_math.workspace = true
kaadan_core.workspace = true
tracing.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
