[package]
name = "kaadan_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GPU rendering backend for KaadanEngine (wgpu)"

[lints]
workspace = true

[dependencies]
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
kaadan_math.workspace = true
kaadan_core.workspace = true
