[package]
name = "kaadan_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GPU rendering backend for KaadanEngine (wgpu)"

[lints]
workspace = true

[features]
default = ["gltf"]
gltf = ["dep:gltf"]

[dependencies]
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
tracing.workspace = true
raw-window-handle.workspace = true
image.workspace = true
gltf = { workspace = true, optional = true }
kaadan_math.workspace = true
kaadan_core.workspace = true
kaadan_ecs.workspace = true
