[package]
name = "kaadan_scene"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Scene graph and serialization for KaadanEngine"

[lints]
workspace = true

[dependencies]
serde.workspace = true
ron.workspace = true
kaadan_ecs.workspace = true
kaadan_core.workspace = true
